--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
+#body { 
+	background-color: black;
+	color: white;
 
+ }
+
+#titulo {
+	font-family: fantasy;
+	align: 180px;
+	font-size: 50px;
+
+}
+
+#cola {
+	font-family: inherit;
+	align: center;
+	background-color: lightyellow;
+}
